mark manual row heights correctly during import, fdo#52393

Change-Id: Id8a1658dbe6d9a89c89d1a0633392b0fa1104c4e